--- a/sec-6-results.tex
+++ b/sec-6-results.tex
@@ -212,7 +212,7 @@ thread, since this reduces the number of levels in the recursive tree reduction
 and provides better latency hiding.
 
 
-\subsection{Fused Dot Product}
+\subsection{Problems with fused dot product}
 
 The fused version of dot product embeds a function of type \code{(sh -> a)} into
 the reduction, represented here as the second argument to the constructor
