--- a/sec-6-results.tex
+++ b/sec-6-results.tex
@@ -472,7 +472,7 @@ a single triple, and \code{blackscholes} maps it over a vector of triples such
 that all individual applications of the formula are executed in parallel.
 %
 \begin{lstlisting}[style=haskell
-    ,float=htbp
+    ,float
     ,label=lst:blackscholes
     ,caption={Black-Scholes option pricing in Accelerate}]
 horner :: Num a => [a] -> a -> a
