--- a/sec-4-implementation.tex
+++ b/sec-4-implementation.tex
@@ -47,6 +47,7 @@ kernels. % We focus on the level zero kernel, which is more interesting.
 \label{sec:parallel_reduction_complexity}
 
 If each thread combines two elements at a time, then a vector of length $N$ will
+\marginnote{tk: for power-of-2 n, add upper/lower bounds symbols}
 be reduced in $\mathcal{O}\left( \log N \right)$ parallel steps. Each step $S$
 does $\sfrac{N}{S^2}$ independent operations, so the \emph{step
 complexity}\index{complexity!step} of the algorithm is:
